--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset=utf-8>
   <meta http-equiv=X-UA-Compatible content="IE=edge">
+  <meta name=viewport content="width=device-width,initial-scale=1">
   <link rel=icon href=/favicon.ico>
   <title>newapp</title>
-  <link as=style href=/box/css/app.03fd7323.css rel=preload>
-  <link as=script href=/box/js/app.94d2c084.js rel=preload>
-  <link as=script href=/box/js/chunk-vendors.c0ee1cb9.js rel=preload>
-  <link href=/box/css/app.03fd7323.css rel=stylesheet>
+  <link as=style href=./css/app.4fae3a44.css rel=preload>
+  <link as=script href=./js/app.769d22df.js rel=preload>
+  <link as=script href=./js/chunk-vendors.c0ee1cb9.js rel=preload>
+  <link href=./css/app.4fae3a44.css rel=stylesheet>
 </head>
 
 <body>
@@ -29,8 +30,8 @@
       <span class=text-vert>Специльаный соус сыр</span>
     </div>
   </div>
-  <script src=/box/js/chunk-vendors.c0ee1cb9.js></script>
-  <script src=/box/js/app.94d2c084.js></script>
+  <script src=./js/chunk-vendors.c0ee1cb9.js></script>
+  <script src=./js/app.769d22df.js></script>
 </body>
 
 </html>
